# domiform

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  depot.json  mise.toml
.github/workflows/: docker.yml
examples/: button_light.yaml  hallway.yaml  healthcheck.yaml  matter_device.yaml  matter_lamp.yaml  nightstands.yaml  nightstands_hue.yaml  schedules.yaml  simple.yaml  virtual_ac.yaml  z2m_multi_gang.yaml  zwave_multi_relay.yaml  zwave_scene_controller.yaml
plans/design/: hap-sidecar-adapter.md  matter-device-reliability.md  northbound-adapters.md  virtual-adapter.md
plans/design/language-expansion/: 00-overview.md  01-numeric-conditions.md  02-color-condition.md  03-expanded-capabilities.md  04-on-change-triggers.md  05-for-duration.md
plans/handoff/: 2026-07-09-matter-device-northbound.md
schema/: domiform.schema.json
src/: color.rs  engine.rs  gui.rs  healthcheck.rs  ids.rs  lib.rs  main.rs  model.rs  observe.rs  rule.rs  state.rs  wake.rs
src/adapters/: clock.rs  matter.rs  mock.rs  mock_northbound.rs  mod.rs  plugin.rs  scheduler.rs  virtual_device.rs  zigbee2mqtt.rs  zwavejs.rs
src/adapters/matter_device/: mod.rs
src/adapters/matter_device/real_transport/: bridge.rs  hooks.rs  mdns.rs  mod.rs
src/compile/: ast.rs  diagnostic.rs  lower.rs  mod.rs  resolve.rs
tests/: color_condition.rs  command_failure.rs  compile.rs  compile_rules.rs  failure_reactions.rs  for_duration.rs  matter.rs  matter_device.rs  motion_light.rs  northbound.rs  numeric_conditions.rs  on_change_triggers.rs  requested_change.rs  schedules.rs  sensors.rs  state_conditions.rs  toggle.rs  virtual_device.rs  zigbee2mqtt.rs  zwavejs.rs
