[package]
name = "domiform"
version = "0.0.0"
edition = "2021"
description = "A declarative engine that shapes the home: config compiles to an object graph, events flow through a deterministic bus."

[lib]
name = "domiform"
path = "src/lib.rs"

[dependencies]
# Real protocol transports, always compiled. The adapters stay testable without a
# broker/controller because the network sits behind a trait seam (`MqttTransport`,
# `MatterController`) that tests swap for an in-memory fake — not behind a feature.
rumqttc = { version = "0.25.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
# Async WebSocket client for the Matter adapter. The adapter confines all async to
# a background tokio runtime; the engine stays single-threaded and synchronous.
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
# Wall-clock math for the clock adapter, all offline. `chrono` deliberately omits
# the `clock` feature: the deterministic core never reads the wall clock itself —
# the boot epoch is captured once in `main.rs` and injected. `chrono-tz` compiles
# the IANA tz database into the binary (no system tzdata); `sunrise` is pure solar
# math from lat/lon/date; `croner` parses cron and computes next occurrences.
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
chrono-tz = "0.10.4"
sunrise = "3.0.0"
croner = "3.0.1"
# Glob expansion for `--check`, so users can validate `examples/*.yaml` in one
# invocation without a shell loop. Tiny, no transitive deps of note.
glob = "0.3.1"

[dev-dependencies]
serde_json = "1.0.150"
# Integration tests build a `ClockAdapter` directly with a fixed boot epoch + tz.
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
chrono-tz = "0.10.4"
