[package]
name = "domiform"
version = "0.0.0"
edition = "2021"
description = "A declarative engine that shapes the home: config compiles to an object graph, events flow through a deterministic bus."

[lib]
name = "domiform"
path = "src/lib.rs"

[dependencies]
# Real protocol transports, always compiled. The adapters stay testable without a
# broker/controller because the network sits behind a trait seam (`MqttTransport`,
# `MatterController`) that tests swap for an in-memory fake — not behind a feature.
rumqttc = { version = "0.25.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
# Async WebSocket client for the Matter adapter. The adapter confines all async to
# a background tokio runtime; the engine stays single-threaded and synchronous.
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
# Wall-clock math for the clock adapter, all offline. `chrono` deliberately omits
# the `clock` feature: the deterministic core never reads the wall clock itself —
# the boot epoch is captured once in `main.rs` and injected. `chrono-tz` compiles
# the IANA tz database into the binary (no system tzdata); `sunrise` is pure solar
# math from lat/lon/date; `croner` parses cron and computes next occurrences.
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
chrono-tz = "0.10.4"
sunrise = "3.0.0"
croner = "3.0.1"
# Glob expansion for `--check`, so users can validate `examples/*.yaml` in one
# invocation without a shell loop. Tiny, no transitive deps of note.
glob = "0.3.1"
# The `matter_device` *northbound* adapter: domiform exposes its devices as a
# native Matter node on the LAN, which Apple Home / Google / Alexa commission
# directly. Pure-Rust (RustCrypto, no openssl/-sys), so the static musl binary is
# preserved. Its own async event loop runs on a background thread behind the
# `MatterTransport` seam — the engine stays single-threaded and synchronous, and
# the pure state↔cluster mapping is unit-tested without a network (as with z2m's
# `MqttTransport`). `async-io`/`futures-lite` are the runtime rs-matter's own
# examples use; the adapter confines them to that thread.
# Pinned to a `main` commit (post-0.2.0) for two fixes absent from the 0.2.0
# release: `persistent-subscriptions` (#504) resumes accepted subscriptions
# across a reboot — so Apple Home doesn't hang on "updating…" after a restart —
# and the reporter re-establishes a CASE session on demand (#504/#505) instead
# of dying on a stale session, which is what left controllers stuck. We keep
# `case-responder-only` OFF (its default) so `Exchange::initiate` may open a
# fresh session; `case-resumption` (#503) adds the Sigma2-Resume fast path.
rs-matter = { git = "https://github.com/project-chip/rs-matter", rev = "a51a82c87858fabecc336442e46ec796db210d6b", features = ["persistent-subscriptions", "case-resumption", "groups"] }
async-io = "2"
futures-lite = "2"
embassy-futures = "0.1.2"
embassy-sync = "0.8.0"
log = "0.4.33"
socket2 = "0.6.4"
if-addrs = "0.15.0"
rand = { version = "0.8", features = ["std", "std_rng"] }
embassy-time-queue-utils = { version = "0.3", features = ["generic-queue-64"] }
env_logger = "0.11.11"
# The optional read-only GUI (`-g`/`--gui`): `tiny_http` is a small, blocking HTTP
# server that runs on its own std thread (no async runtime — the engine stays
# single-threaded). It serves the device/rule graph as embedded JSON plus a small
# self-authored force-directed renderer (inline vanilla JS), so the page is fully
# self-contained and offline — no CDN, no vendored JS bundle. `serde_json`
# (already a dependency) serializes the graph into the page.
tiny_http = "0.12"

[dev-dependencies]
serde_json = "1.0.150"
# Integration tests build a `ClockAdapter` directly with a fixed boot epoch + tz.
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
chrono-tz = "0.10.4"
